[project]
name = "ssh-copy-id"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "pedoc",email = "pedoc@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fabric (>=3.2.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
nuitka = "^2.6.9"

